syntax = "proto3";
package lum.network.beam;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

import "beam/beam.proto";

option go_package = "github.com/lum-network/chain/x/beam/types";

// Query defines the gRPC querier service.
service Query {
  rpc Beam(QueryGetBeamRequest) returns (QueryGetBeamResponse) {
    option (google.api.http).get = "/lumnetwork/beam/get/{id}";
  }

  rpc Beams(QueryFetchBeamsRequest) returns (QueryFetchBeamsResponse) {
    option (google.api.http).get = "/lumnetwork/beam/fetch";
  }
}

message QueryGetBeamRequest {
  string id = 1;
}

message QueryGetBeamResponse {
  Beam Beam = 1;
}

message QueryFetchBeamsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryFetchBeamsResponse {
  repeated Beam Beam = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}